@@ -1,0 +1,42 @@
+import { test, expect } from '@playwright/test';
+
+test.describe('IDEE.Popup', () => {
+  test.beforeEach(async ({ page }) => {
+    await page.goto('/test/playwright/ol/basic-ol.html');
+    await page.evaluate(() => {
+      const map = IDEE.map({
+        container: 'map',
+        center: [-516514.279416561, 4874194.031273619],
+        zoom: 5,
+        layers: [],
+      });
+      window.map = map;
+    });
+  });
+
+  test('IDEE.Popup.options', async ({ page }) => {
+    const text = 'Google Maps';
+    await page.evaluate((msg) => {
+      IDEE.Popup.options.takeMeThere = true;
+      IDEE.Popup.options.textMode = true;
+      IDEE.Popup.options.msg = msg;
+
+      const ogc_001 = new IDEE.layer.OGCAPIFeatures({
+        url: 'https://api-features.idee.es/collections/',
+        name: 'falls',
+        legend: 'Capa OGCAPIFeatures',
+        extract: true,
+      });
+
+      return new Promise((resolve) => {
+        window.map.on(IDEE.evt.ADDED_OGCAPIFEATURES, () => {
+          resolve();
+        });
+        window.map.addLayers(ogc_001);
+      });
+    }, text);
+    await page.mouse.click(562, 293);
+    const footer = await page.locator('.m-popup.m-collapsed .m-footer');
+    await expect(footer).toHaveText(text);
+  });
+});
